--- a/config/assets.yml
+++ b/config/assets.yml
@@ -3,6 +3,8 @@ javascript_compressor: closure # (yui, closure)
 
 javascripts:
   common:
+    - public/javascripts/lib/modernizr.js
+    - public/javascripts/lib/webfonts.js
     - public/javascripts/jquery/jquery.blockUI.js
     - public/javascripts/lib/underscore.js
     - public/javascripts/lib/rails.js
@@ -12,7 +14,6 @@ stylesheets:
   common:
     - public/stylesheets/yui/reset.css
     - public/stylesheets/yui/fonts.css
-    - public/stylesheets/yui/grids.css
     - public/stylesheets/yui/base.css
     - public/stylesheets/application.css
   admin:
